<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/contacts"
        android:checked="true"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/tab1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/conversations"
        android:checked="true"
        android:icon="@drawable/ic_directions_car_black_24dp"
        android:title="@string/tab2"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/settings"
        android:checked="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/tab5"
        app:showAsAction="ifRoom" />

</menu>